# beer-tap-dispenser-api

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
api/: exceptions.py  factory.py  models.py  serializers.py  urls.py  viewsets.py
api/migrations/: 0001_initial.py
app/: settings.py  urls.py
tests/api/: tests_api.py  tests_models.py  tests_serializers.py
